Fix z-index for style widget popup depending on sidebar
ERM33076

[4.3.x]

(cherry picked from commit b88cca08eca958e23e84c1440d9642b83d9c3dbb)

--- a/resources/stylesheets/fixes/extension-fixes.css
+++ b/resources/stylesheets/fixes/extension-fixes.css
@@ -2,3 +2,8 @@
 	margin-left: -24px;
 	width: 20px;
 }
+
+/* z-index for popup to low for sidebars */
+.oo-ui-popupWidget.bs-vec-styleInspector {
+	z-index: 1002;
+}
